// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldWrapper should add clear button if showClearButton is true 1`] = `
<DocumentFragment>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
    <button
      class="Button Button--context_link Button--isInline FieldWrapper__clearButton"
      title="Clear"
      type="button"
    >
      Clear
    </button>
  </div>
</DocumentFragment>
`;

exports[`FieldWrapper should call onArrowClick when arrow is accessed by keyboard 1`] = `
<DocumentFragment>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
    <svg
      class="FieldWrapper__dropdownIcon"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      tabindex="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 192l128 128 128-128z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`FieldWrapper should call onArrowClick when arrow is clicked 1`] = `
<DocumentFragment>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
    <svg
      class="FieldWrapper__dropdownIcon"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      tabindex="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 192l128 128 128-128z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`FieldWrapper should call onClear callback correctly 1`] = `
<DocumentFragment>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      tag
    </div>
    <button
      class="Button Button--context_link Button--isInline FieldWrapper__clearButton"
      title="Clear"
      type="button"
    >
      Clear
    </button>
  </div>
</DocumentFragment>
`;

exports[`FieldWrapper should render arrow icon pointing down 1`] = `
<DocumentFragment>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
    <svg
      class="FieldWrapper__dropdownIcon"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      tabindex="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 192l128 128 128-128z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`FieldWrapper should render arrow icon pointing up 1`] = `
<DocumentFragment>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
    <svg
      class="FieldWrapper__dropdownIcon"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      tabindex="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M128 320l128-128 128 128z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`FieldWrapper should render correctly 1`] = `
<DocumentFragment>
  <div
    class="FieldWrapper"
  >
    <div
      class="FieldWrapper__content"
    >
      some children
    </div>
  </div>
</DocumentFragment>
`;
